fix(/dashboard/blog/[id]): fix stretchy fields in empty article editor
fix #148

--- a/scss/components/_response-form.scss
+++ b/scss/components/_response-form.scss
@@ -73,4 +73,8 @@
     border: none;
     margin-bottom: 0;
   }
+
+  menu {
+    margin-left: auto;
+  }
 }
