--- a/scss/core/_form.scss
+++ b/scss/core/_form.scss
@@ -2,10 +2,9 @@ form {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  flex-shrink: 1;
 
-  fieldset {
-    flex-grow: 1;
-
+  > fieldset {
     &:not(:last-child) {
       margin-bottom: var(--gutter);
     }
