--- a/scss/core/_menu.scss
+++ b/scss/core/_menu.scss
@@ -1,7 +1,6 @@
 menu {
   align-items: stretch;
   display: flex;
-  flex-grow: 1;
   justify-content: flex-end;
 
   span {
